--- a/package.json
+++ b/package.json
@@ -42,17 +42,17 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.802.2",
-    "@angular/animations": "^8.2.3",
-    "@angular/cli": "8.2.2",
-    "@angular/common": "8.2.2",
-    "@angular/compiler": "8.2.2",
-    "@angular/compiler-cli": "8.2.2",
-    "@angular/core": "8.2.2",
-    "@angular/forms": "8.2.2",
-    "@angular/language-service": "8.2.2",
-    "@angular/platform-browser": "8.2.2",
-    "@angular/platform-browser-dynamic": "8.2.2",
-    "@angular/router": "8.2.2",
+    "@angular/animations": "^8.2.2",
+    "@angular/cli": "^8.2.2",
+    "@angular/common": "^8.2.2",
+    "@angular/compiler": "^8.2.2",
+    "@angular/compiler-cli": "^8.2.2",
+    "@angular/core": "^8.2.2",
+    "@angular/forms": "^8.2.2",
+    "@angular/language-service": "^8.2.2",
+    "@angular/platform-browser": "^8.2.2",
+    "@angular/platform-browser-dynamic": "^8.2.2",
+    "@angular/router": "^8.2.2",
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@clr/angular": "^2.1.2",
@@ -73,6 +73,7 @@
     "electron": "6.0.9",
     "electron-builder": "21.2.0",
     "electron-reload": "1.5.0",
+    "highcharts": "^7.2.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.2.0",
@@ -81,6 +82,7 @@
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
     "mocha": "6.2.0",
+    "ngx-moment": "^3.4.0",
     "npm-run-all": "4.1.5",
     "rxjs": "6.5.2",
     "spectron": "8.0.0",
