--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "main": "electron/main.js",
   "private": true,
   "scripts": {
-    "postinstall": "npm run postinstall:electron && electron-builder install-app-deps",
+    "postinstall": "npm run postinstall:electron && electron-builder install-app-deps && codesign --deep --force --verbose --sign - node_modules/electron/dist/Electron.app",
     "postinstall:web": "node postinstall-web",
     "postinstall:electron": "node postinstall",
     "ng": "ng",
@@ -99,7 +99,7 @@
   "dependencies": {
     "electron-log": "^3.0.8",
     "electron-store": "^4.0.0",
-    "keytar": "^5.0.0-beta.2",
+    "keytar": "^4.13.0",
     "meteor-node-stubs": "^0.4.1",
     "pm2": "^3.5.1",
     "tcp-port-used": "^1.0.1"
