--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
     "codelyzer": "5.1.0",
     "conventional-changelog-cli": "2.0.21",
     "core-js": "3.1.4",
+    "dotenv": "^8.1.0",
     "electron": "6.0.9",
     "electron-builder": "21.2.0",
+    "electron-notarize": "^0.1.1",
     "electron-reload": "1.5.0",
     "highcharts": "^7.2.0",
     "jasmine-core": "3.4.0",
