--- a/build-scripts/entitlements.mac.inherit.plist
+++ b/build-scripts/entitlements.mac.inherit.plist
@@ -6,9 +6,28 @@
     <true/>
     <key>com.apple.security.cs.disable-library-validation</key>
     <true/>
-    <key>com.apple.security.cs.allow-jit</key>
+    <!-- <key>com.apple.security.cs.allow-jit</key>
     <true/>
     <key>com.apple.security.cs.allow-dyld-environment-variables</key>
     <true/>
+
+    <key>com.apple.security.files.user-selected.read-write</key>
+  	<true/>
+	  <key>com.apple.security.files.user-selected.read-only</key>
+	  <true/>
+
+    <key>com.apple.security.network.client</key>
+    <true/>
+    <key>com.apple.security.network.server</key>
+    <true/>
+
+    <key>com.apple.application-identifier</key>
+    <string>WW49A8Y53S.com.datirium.scidap-satellite</string>
+    <key>com.apple.developer.team-identifier</key>
+    <string>WW49A8Y53S</string>
+    <key>com.apple.security.application-groups</key>
+    <array>
+      <string>WW49A8Y53S.com.datirium.scidap-satellite</string>
+    </array> -->
   </dict>
 </plist>
