--- a/package.json
+++ b/package.json
@@ -42,37 +42,37 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.802.2",
-    "@angular/animations": "^8.2.2",
-    "@angular/cli": "^8.2.2",
-    "@angular/common": "^8.2.2",
-    "@angular/compiler": "^8.2.2",
-    "@angular/compiler-cli": "^8.2.2",
-    "@angular/core": "^8.2.2",
-    "@angular/forms": "^8.2.2",
-    "@angular/language-service": "^8.2.2",
-    "@angular/platform-browser": "^8.2.2",
-    "@angular/platform-browser-dynamic": "^8.2.2",
-    "@angular/router": "^8.2.2",
-    "@babel/core": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
-    "@clr/angular": "^2.1.2",
-    "@clr/icons": "^2.1.2",
-    "@clr/ui": "^2.1.2",
+    "@angular/animations": "^8.2.12",
+    "@angular/cli": "^8.3.14",
+    "@angular/common": "^8.2.12",
+    "@angular/compiler": "^8.2.12",
+    "@angular/compiler-cli": "^8.2.12",
+    "@angular/core": "^8.2.12",
+    "@angular/forms": "^8.2.12",
+    "@angular/language-service": "^8.2.12",
+    "@angular/platform-browser": "^8.2.12",
+    "@angular/platform-browser-dynamic": "^8.2.12",
+    "@angular/router": "^8.2.12",
+    "@babel/core": "^7.6.4",
+    "@babel/runtime": "^7.6.3",
+    "@clr/angular": "^2.3.0",
+    "@clr/icons": "^2.3.0",
+    "@clr/ui": "^2.3.0",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
     "@types/jasmine": "3.3.16",
     "@types/jasminewd2": "2.0.6",
-    "@types/meteor": "^1.4.29",
+    "@types/meteor": "^1.4.34",
     "@types/mocha": "5.2.7",
     "@types/node": "12.6.8",
-    "@webcomponents/custom-elements": "^1.2.4",
+    "@webcomponents/custom-elements": "^1.3.0",
     "chai": "4.2.0",
     "codelyzer": "5.1.0",
     "conventional-changelog-cli": "2.0.21",
     "core-js": "3.1.4",
-    "dotenv": "^8.1.0",
-    "electron": "6.0.9",
-    "electron-builder": "21.2.0",
+    "dotenv": "^8.2.0",
+    "electron": "^7.0.0",
+    "electron-builder": "^21.2.0",
     "electron-notarize": "^0.1.1",
     "electron-reload": "1.5.0",
     "highcharts": "^7.2.0",
@@ -85,6 +85,7 @@
     "karma-jasmine-html-reporter": "1.4.2",
     "mocha": "6.2.0",
     "ngx-moment": "^3.4.0",
+    "node-abi": "^2.12.0",
     "npm-run-all": "4.1.5",
     "rxjs": "6.5.2",
     "spectron": "8.0.0",
