--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scidap-satellite",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "scientific data analysis platform satellite bundle",
   "homepage": "https://scidap.com/",
   "author": {
@@ -11,7 +11,7 @@
     "scidap",
     "meteor",
     "angular",
-    "angular 8",
+    "angular 9",
     "electron",
     "typescript",
     "sass"
@@ -41,72 +41,75 @@
     "lint": "ng lint"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.802.2",
-    "@angular/animations": "^8.2.12",
-    "@angular/cli": "^8.3.14",
-    "@angular/common": "^8.2.12",
-    "@angular/compiler": "^8.2.12",
-    "@angular/compiler-cli": "^8.2.12",
-    "@angular/core": "^8.2.12",
-    "@angular/forms": "^8.2.12",
-    "@angular/language-service": "^8.2.12",
-    "@angular/platform-browser": "^8.2.12",
-    "@angular/platform-browser-dynamic": "^8.2.12",
-    "@angular/router": "^8.2.12",
-    "@babel/core": "^7.6.4",
-    "@babel/runtime": "^7.6.3",
-    "@clr/angular": "^2.3.0",
-    "@clr/icons": "^2.3.0",
-    "@clr/ui": "^2.3.0",
-    "@ngx-translate/core": "11.0.1",
+    "@angular-devkit/build-angular": "~0.901.3",
+    "@angular/animations": "^9.1.3",
+    "@angular/cli": "^9.1.3",
+    "@angular/common": "^9.1.3",
+    "@angular/compiler": "^9.1.3",
+    "@angular/compiler-cli": "^9.1.3",
+    "@angular/core": "^9.1.3",
+    "@angular/forms": "^9.1.3",
+    "@angular/language-service": "^9.1.3",
+    "@angular/platform-browser": "^9.1.3",
+    "@angular/platform-browser-dynamic": "^9.1.3",
+    "@angular/router": "^9.1.3",
+    "@babel/core": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
+    "@clr/angular": "^3.1.1",
+    "@clr/icons": "^3.1.1",
+    "@clr/ui": "^3.1.1",
+    "@clr/core": "^3.1.1",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "@ngx-translate/core": "12.1.2",
     "@ngx-translate/http-loader": "4.0.0",
-    "@types/jasmine": "3.3.16",
-    "@types/jasminewd2": "2.0.6",
-    "@types/meteor": "^1.4.34",
-    "@types/mocha": "5.2.7",
-    "@types/node": "12.6.8",
-    "@webcomponents/custom-elements": "^1.3.0",
+    "@types/jasmine": "3.5.10",
+    "@types/jasminewd2": "2.0.8",
+    "@types/meteor": "^1.4.45",
+    "@types/mocha": "7.0.2",
+    "@types/node": "^12.11.1",
+    "@webcomponents/custom-elements": "^1.4.1",
     "chai": "4.2.0",
-    "codelyzer": "5.1.0",
-    "conventional-changelog-cli": "2.0.21",
-    "core-js": "3.1.4",
+    "codelyzer": "^5.1.2",
+    "conventional-changelog-cli": "2.0.31",
+    "core-js": "3.6.5",
     "dotenv": "^8.2.0",
-    "electron": "^7.1.1",
-    "electron-builder": "^21.2.0",
-    "electron-notarize": "^0.2.0",
+    "electron": "^8.2.4",
+    "electron-builder": "^22.5.1",
+    "electron-notarize": "^0.3.0",
     "electron-reload": "1.5.0",
-    "highcharts": "^7.2.0",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.2.0",
-    "karma-chrome-launcher": "3.0.0",
-    "karma-coverage-istanbul-reporter": "2.1.0",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.2",
-    "mocha": "6.2.0",
-    "ngx-moment": "^3.4.0",
-    "node-abi": "^2.12.0",
+    "highcharts": "^8.0.4",
+    "jasmine-core": "3.5.0",
+    "jasmine-spec-reporter": "5.0.2",
+    "karma": "5.0.2",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "2.1.1",
+    "karma-jasmine": "3.1.1",
+    "karma-jasmine-html-reporter": "1.5.3",
+    "mocha": "7.1.2",
+    "ngx-moment": "^3.5.0",
+    "node-abi": "^2.16.0",
     "npm-run-all": "4.1.5",
-    "rxjs": "6.5.2",
-    "spectron": "8.0.0",
-    "ts-node": "8.3.0",
-    "tslint": "5.18.0",
-    "typescript": "3.5.3",
-    "wait-on": "3.3.0",
-    "webdriver-manager": "12.1.5",
-    "zone.js": "0.9.1"
+    "rxjs": "6.5.5",
+    "spectron": "10.0.1",
+    "ts-node": "8.9.1",
+    "tslint": "6.1.2",
+    "typescript": "3.8.3",
+    "tslib": "^1.10.0",
+    "wait-on": "4.0.2",
+    "webdriver-manager": "12.1.7",
+    "zone.js": "~0.10.2"
   },
   "engines": {
     "node": ">=10.9.0"
   },
   "dependencies": {
-    "electron-log": "^3.0.8",
-    "electron-store": "^4.0.0",
-    "electron-updater": "^4.2.0",
-    "keytar": "^4.13.0",
-    "meteor-node-stubs": "^0.4.1",
-    "mongo-express": "^0.53.0",
-    "pm2": "^4.1.2",
+    "electron-log": "^4.1.1",
+    "electron-store": "^5.1.1",
+    "electron-updater": "^4.3.1",
+    "keytar": "^5.6.0",
+    "meteor-node-stubs": "^1.0.0",
+    "mongo-express": "^0.54.0",
+    "pm2": "^4.4.0",
     "tcp-port-used": "^1.0.1"
   }
 }
