--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scidap-satellite",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "scientific data analysis platform satellite bundle",
   "homepage": "https://scidap.com/",
   "author": {
@@ -19,7 +19,8 @@
   "main": "electron/main.js",
   "private": true,
   "scripts": {
-    "postinstall": "npm run postinstall:electron && electron-builder install-app-deps && codesign --deep --force --verbose --sign - node_modules/electron/dist/Electron.app",
+    "postinstall_meteor": "test -f ./utils/meteor-client.js || npm run client-bundle",
+    "postinstall": "tar -C ./node_modules -jxvf meteor.tar.bz2; npm run postinstall:electron && electron-builder install-app-deps && codesign --deep --force --verbose --sign - node_modules/electron/dist/Electron.app",
     "postinstall:web": "node postinstall-web",
     "postinstall:electron": "node postinstall",
     "ng": "ng",
@@ -41,75 +42,75 @@
     "lint": "ng lint"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.3",
-    "@angular/animations": "^9.1.3",
-    "@angular/cli": "^9.1.3",
-    "@angular/common": "^9.1.3",
-    "@angular/compiler": "^9.1.3",
-    "@angular/compiler-cli": "^9.1.3",
-    "@angular/core": "^9.1.3",
-    "@angular/forms": "^9.1.3",
-    "@angular/language-service": "^9.1.3",
-    "@angular/platform-browser": "^9.1.3",
-    "@angular/platform-browser-dynamic": "^9.1.3",
-    "@angular/router": "^9.1.3",
-    "@babel/core": "^7.9.0",
-    "@babel/runtime": "^7.9.2",
-    "@clr/angular": "^3.1.1",
-    "@clr/icons": "^3.1.1",
-    "@clr/ui": "^3.1.1",
-    "@clr/core": "^3.1.1",
-    "@webcomponents/webcomponentsjs": "^2.0.0",
-    "@ngx-translate/core": "12.1.2",
-    "@ngx-translate/http-loader": "4.0.0",
-    "@types/jasmine": "3.5.10",
+    "@angular-devkit/build-angular": "~0.1002.0",
+    "@angular/animations": "^10.2.3",
+    "@angular/cli": "^10.2.0",
+    "@angular/common": "^10.2.3",
+    "@angular/compiler": "^10.2.3",
+    "@angular/compiler-cli": "^10.2.3",
+    "@angular/core": "^10.2.3",
+    "@angular/forms": "^10.2.3",
+    "@angular/language-service": "^10.2.3",
+    "@angular/platform-browser": "^10.2.3",
+    "@angular/platform-browser-dynamic": "^10.2.3",
+    "@angular/router": "^10.2.3",
+    "@babel/core": "^7.12.3",
+    "@babel/runtime": "^7.12.5",
+    "@clr/angular": "^4.0.5",
+    "@clr/icons": "^4.0.5",
+    "@clr/ui": "^4.0.5",
+    "@clr/core": "^4.0.5",
+    "@webcomponents/webcomponentsjs": "^2.5.0",
+    "@ngx-translate/core": "13.0.0",
+    "@ngx-translate/http-loader": "6.0.0",
+    "@types/jasmine": "3.6.1",
     "@types/jasminewd2": "2.0.8",
-    "@types/meteor": "^1.4.45",
-    "@types/mocha": "7.0.2",
-    "@types/node": "^12.11.1",
-    "@webcomponents/custom-elements": "^1.4.1",
+    "@types/meteor": "^1.4.64",
+    "@types/mocha": "8.0.4",
+    "@types/node": "^14.14.7",
+    "@webcomponents/custom-elements": "^1.4.3",
     "chai": "4.2.0",
-    "codelyzer": "^5.1.2",
-    "conventional-changelog-cli": "2.0.31",
-    "core-js": "3.6.5",
+    "codelyzer": "^6.0.1",
+    "conventional-changelog-cli": "2.1.1",
+    "core-js": "3.7.0",
     "dotenv": "^8.2.0",
-    "electron": "^8.2.4",
-    "electron-builder": "^22.5.1",
-    "electron-notarize": "^0.3.0",
+    "electron": "^10.1.5",
+    "electron-builder": "^22.9.1",
+    "electron-notarize": "^1.0.0",
     "electron-reload": "1.5.0",
-    "highcharts": "^8.0.4",
-    "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "5.0.2",
-    "karma": "5.0.2",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage-istanbul-reporter": "2.1.1",
-    "karma-jasmine": "3.1.1",
-    "karma-jasmine-html-reporter": "1.5.3",
-    "mocha": "7.1.2",
-    "ngx-moment": "^3.5.0",
-    "node-abi": "^2.16.0",
+    "highcharts": "^8.2.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "mocha": "8.2.1",
+    "ngx-moment": "^5.0.0",
+    "node-abi": "^2.19.1",
     "npm-run-all": "4.1.5",
-    "rxjs": "6.5.5",
-    "spectron": "10.0.1",
-    "ts-node": "8.9.1",
-    "tslint": "6.1.2",
-    "typescript": "3.8.3",
-    "tslib": "^1.10.0",
-    "wait-on": "4.0.2",
+    "rxjs": "6.6.3",
+    "spectron": "12.0.0",
+    "ts-node": "9.0.0",
+    "tslint": "~6.1.0",
+    "typescript": "4.0.5",
+    "tslib": "^2.0.0",
+    "wait-on": "5.2.0",
     "webdriver-manager": "12.1.7",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.3"
   },
   "engines": {
     "node": ">=10.9.0"
   },
   "dependencies": {
-    "electron-log": "^4.1.1",
-    "electron-store": "^5.1.1",
-    "electron-updater": "^4.3.1",
-    "keytar": "^5.6.0",
-    "meteor-node-stubs": "^1.0.0",
-    "mongo-express": "^0.54.0",
-    "pm2": "^4.4.0",
+    "electron-log": "^4.3.0",
+    "electron-store": "^6.0.1",
+    "electron-updater": "^4.3.5",
+    "keytar": "^7.0.0",
+    "meteor-node-stubs": "^1.0.1",
+    "mongo-express": "^1.0.0-alpha.1",
+    "pm2": "^4.5.0",
     "tcp-port-used": "^1.0.1"
   }
 }
