--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             "scripts": [
               "src/environments/client.config.js",
               "utils/meteor-client.js",
-              "node_modules/@webcomponents/custom-elements/custom-elements.min.js",
+              "node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js",
+              "node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js",
               "node_modules/@clr/icons/clr-icons.min.js"
             ]
           },
