--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "private": true,
   "scripts": {
     "postinstall_meteor": "test -f ./utils/meteor-client.js || npm run client-bundle",
-    "postinstall": "tar -C ./node_modules -jxvf meteor.tar.bz2; npm run postinstall:electron && electron-builder install-app-deps && codesign --deep --force --verbose --sign - node_modules/electron/dist/Electron.app",
+    "postinstall": "tar -C ./node_modules -jxvf meteor.tar.bz2; cp ./utils/util.js ./node_modules/app-builder-lib/electron-osx-sign ;  npm run postinstall:electron && electron-builder install-app-deps && codesign --deep --force --verbose --sign - node_modules/electron/dist/Electron.app",
     "postinstall:web": "node postinstall-web",
     "postinstall:electron": "node postinstall",
     "ng": "ng",
@@ -44,11 +44,13 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.0",
     "@angular/animations": "^10.2.3",
+    "@angular/cdk": "^10.2.0",
     "@angular/cli": "^10.2.0",
     "@angular/common": "^10.2.3",
     "@angular/compiler": "^10.2.3",
     "@angular/compiler-cli": "^10.2.3",
     "@angular/core": "^10.2.3",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "^10.2.3",
     "@angular/language-service": "^10.2.3",
     "@angular/platform-browser": "^10.2.3",
@@ -57,10 +59,9 @@
     "@babel/core": "^7.12.3",
     "@babel/runtime": "^7.12.5",
     "@clr/angular": "^4.0.5",
+    "@clr/core": "^4.0.5",
     "@clr/icons": "^4.0.5",
     "@clr/ui": "^4.0.5",
-    "@clr/core": "^4.0.5",
-    "@webcomponents/webcomponentsjs": "^2.5.0",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "@types/jasmine": "3.6.1",
@@ -69,6 +70,7 @@
     "@types/mocha": "8.0.4",
     "@types/node": "^14.14.7",
     "@webcomponents/custom-elements": "^1.4.3",
+    "@webcomponents/webcomponentsjs": "^2.5.0",
     "chai": "4.2.0",
     "codelyzer": "^6.0.1",
     "conventional-changelog-cli": "2.1.1",
@@ -93,12 +95,12 @@
     "rxjs": "6.6.3",
     "spectron": "12.0.0",
     "ts-node": "9.0.0",
+    "tslib": "^2.0.0",
     "tslint": "~6.1.0",
     "typescript": "4.0.5",
-    "tslib": "^2.0.0",
     "wait-on": "5.2.0",
     "webdriver-manager": "12.1.7",
-    "zone.js": "~0.11.3"
+    "zone.js": "^0.11.3"
   },
   "engines": {
     "node": ">=10.9.0"
