Add defaultLocations section into scidap_settings.json
If locations are relative they will be resolved based
on the satelliteSettings.scidapRoot value

--- a/build-scripts/configs/scidap_default_settings.json
+++ b/build-scripts/configs/scidap_default_settings.json
@@ -1,4 +1,11 @@
 {
+    "defaultLocations": {
+        "files": "files",
+        "mongodb": "mongodb",
+        "airflow": "airflow",
+        "satellite": "satellite",
+        "pgdata": "pgdata"
+    },
     "satelliteSettings": {
         "rcServerToken": "",
         "rcServer": "https://api-sync.scidap.com",
