Add aria2cSettings section in scidap_setting.json
To allow dynamically change aria2c settings. It's
helpful for the servers that requre additional
configuration such as --remove-control-file=true
when run from proxy that doesn't allow to resume
download

--- a/build-scripts/configs/scidap_default_settings.json
+++ b/build-scripts/configs/scidap_default_settings.json
@@ -30,6 +30,12 @@
         "core.load_examples": "False",
         "core.max_active_runs_per_dag": 1
     },
+    "aria2cSettings": {
+        "--console-log-level": "debug",
+        "--remove-control-file": true,
+        "--allow-overwrite": true,
+        "--auto-file-renaming": false
+    },
     "databaseSettings":{
         "db_port": 5432,
         "db_user": "airflow",
