Switch to CWL-Airflow 1.2.9 (with Airflow 2.0.0)

--- a/build-scripts/configs/scidap_default_settings.json
+++ b/build-scripts/configs/scidap_default_settings.json
@@ -27,10 +27,8 @@
     "airflowSettings": {
         "core.executor": "LocalExecutor",
         "core.dag_concurrency": 2,
-        "core.dags_are_paused_at_creation": "False",
-        "core.load_examples": "False",
         "core.max_active_runs_per_dag": 1,
-        "core.hostname_callable": "socket:gethostname"
+        "core.hostname_callable": "socket.gethostname"
     },
     "aria2cSettings": {
         "--console-log-level": "debug",
