Set enableSSL by default to true

--- a/build-scripts/configs/scidap_default_settings.json
+++ b/build-scripts/configs/scidap_default_settings.json
@@ -14,7 +14,7 @@
         "aria2cPort": 6800,
         "pm2Port": 9615,
         "baseUrl": "http://localhost:3069/",
-        "enableSSL": false,
+        "enableSSL": true,
         "localFiles": true,
         "proxy": "",
         "noProxy": "",
