Move airflow to Library folder, set tmp folder from UI
Updated the way we set params for Airflow in the settings file

--- a/build-scripts/configs/scidap_default_settings.json
+++ b/build-scripts/configs/scidap_default_settings.json
@@ -32,10 +32,10 @@
         }
     },
     "airflowSettings": {
-        "core.executor": "LocalExecutor",
-        "core.dag_concurrency": 2,
-        "core.max_active_runs_per_dag": 1,
-        "core.hostname_callable": "socket.gethostname"
+        "core__executor": "LocalExecutor",
+        "core__dag_concurrency": 2,
+        "core__max_active_runs_per_dag": 1,
+        "core__hostname_callable": "socket.gethostname"
     },
     "aria2cSettings": {
         "--console-log-level": "debug",
