--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scidap-satellite",
-  "version": "1.0.12",
+  "version": "1.0.13.beta1",
   "description": "scientific data analysis platform satellite bundle",
   "homepage": "https://scidap.com/",
   "author": {
@@ -42,20 +42,20 @@
     "lint": "ng lint"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/animations": "^10.2.3",
+    "@angular-devkit/build-angular": "~0.1002.1",
+    "@angular/animations": "^10.2.4",
     "@angular/cdk": "^10.2.0",
-    "@angular/cli": "^10.2.0",
-    "@angular/common": "^10.2.3",
-    "@angular/compiler": "^10.2.3",
-    "@angular/compiler-cli": "^10.2.3",
-    "@angular/core": "^10.2.3",
+    "@angular/cli": "^10.2.1",
+    "@angular/common": "^10.2.4",
+    "@angular/compiler": "^10.2.4",
+    "@angular/compiler-cli": "^10.2.4",
+    "@angular/core": "^10.2.4",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "^10.2.3",
-    "@angular/language-service": "^10.2.3",
-    "@angular/platform-browser": "^10.2.3",
-    "@angular/platform-browser-dynamic": "^10.2.3",
-    "@angular/router": "^10.2.3",
+    "@angular/forms": "^10.2.4",
+    "@angular/language-service": "^10.2.4",
+    "@angular/platform-browser": "^10.2.4",
+    "@angular/platform-browser-dynamic": "^10.2.4",
+    "@angular/router": "^10.2.4",
     "@babel/core": "^7.12.3",
     "@babel/runtime": "^7.12.5",
     "@clr/angular": "^4.0.5",
@@ -90,7 +90,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "mocha": "8.2.1",
     "ngx-moment": "^5.0.0",
-    "node-abi": "^2.19.1",
+    "node-abi": "^2.19.3",
     "npm-run-all": "4.1.5",
     "rxjs": "6.6.3",
     "spectron": "13.0.0",
@@ -98,7 +98,7 @@
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
     "typescript": "4.0.5",
-    "wait-on": "5.2.0",
+    "wait-on": "^5.2.1",
     "webdriver-manager": "12.1.8",
     "zone.js": "^0.11.3"
   },
