--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scidap-satellite",
-  "version": "1.0.13.beta1",
+  "version": "1.0.13-beta2",
   "description": "scientific data analysis platform satellite bundle",
   "homepage": "https://scidap.com/",
   "author": {
