Split electron:mac into dev and prod subcommands

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "electron:local": "npm run build:prod && electron .",
     "electron:linux": "npm run build:prod && electron-builder build --linux",
     "electron:windows": "npm run build:prod && electron-builder build --windows",
-    "electron:mac": "npm run build:prod && DEBUG=electron-notarize electron-builder build --mac",
+    "electron:mac:prod": "cp -f ./src/environments/client.config.prod.js ./src/environments/client.config.js; npm run build:prod && DEBUG=electron-notarize electron-builder build --mac",
+    "electron:mac:dev": "cp -f ./src/environments/client.config.dev.js ./src/environments/client.config.js; npm run build:prod && DEBUG=electron-notarize electron-builder build --mac",
     "test": "npm run postinstall:web && ng test",
     "e2e": "npm run build:prod && mocha --timeout 300000 --require ts-node/register e2e/**/*.spec.ts",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
