Add simulation parameter to default settings file
If set to true will run API with --simulation flag

--- a/build-scripts/configs/scidap_default_settings.json
+++ b/build-scripts/configs/scidap_default_settings.json
@@ -49,5 +49,6 @@
         "db_user": "airflow",
         "db_password": "airflow",
         "db_name": "airflow"
-    }
+    },
+    "simulation": false
 }
