Use devel section in config instead of just simulation parameter

--- a/build-scripts/configs/scidap_default_settings.json
+++ b/build-scripts/configs/scidap_default_settings.json
@@ -50,5 +50,7 @@
         "db_password": "airflow",
         "db_name": "airflow"
     },
-    "simulation": false
+    "devel":{
+        "simulation": false
+    }
 }
