Configurable setting for automatic updates.
See update_from_devel parameter

--- a/build-scripts/configs/scidap_default_settings.json
+++ b/build-scripts/configs/scidap_default_settings.json
@@ -51,6 +51,9 @@
         "db_name": "airflow"
     },
     "devel":{
-        "simulation": false
+        "simulation": false,
+        "mac":{
+            "update_from_devel": true
+        }
     }
 }
