Need to use one level in devel settings

--- a/build-scripts/configs/scidap_default_settings.json
+++ b/build-scripts/configs/scidap_default_settings.json
@@ -52,8 +52,6 @@
     },
     "devel":{
         "simulation": false,
-        "mac":{
-            "update_from_devel": true
-        }
+        "mac_update_from_devel": true
     }
 }
