--- a/build-scripts/configs/scidap_default_settings.json
+++ b/build-scripts/configs/scidap_default_settings.json
@@ -43,7 +43,11 @@
         "core__parallelism": 1,
         "core__dag_concurrency": 1,
         "core__max_active_runs_per_dag": 5,
-        "core__hostname_callable": "socket.gethostname"
+        "core__hostname_callable": "socket.gethostname",
+        "webserver__rbac": false,
+        "webserver__enable_proxy_fix": "True",
+        "webserver__web_server_port": 8081,
+        "webserver__web_server_host": "127.0.0.1"
     },
     "aria2cSettings": {
         "--console-log-level": "debug",
