formalize env setting and configuration for cluster-api within satellite. (still need to make cluster-api repo public and make releases for download and setup)

--- a/build-scripts/configs/scidap_default_cluster_settings.json
+++ b/build-scripts/configs/scidap_default_cluster_settings.json
@@ -42,7 +42,8 @@
     "clusterApiSettings": {
         "scriptDir": "/home/scidap/satellite/satellite/bin",
         "outputDir": "/home/scidap/scidap/projects",
-        "tmpToilDir": "/mnt/cache/TMP_TOIL_DIR"
+        "tmpToilDir": "/mnt/cache/TMP_TOIL_DIR",
+        "envFilePath": "/data/barskilab/temporary/myenv/bin/activate"
     },
     "aria2cSettings": {
         "--console-log-level": "debug",
