--- a/build-scripts/configs/scidap_default_cluster_settings.json
+++ b/build-scripts/configs/scidap_default_cluster_settings.json
@@ -42,8 +42,9 @@
     "clusterApiSettings": {
         "scriptDir": "/home/scidap/satellite/satellite/bin",
         "outputDir": "/home/scidap/scidap/projects",
-        "tmpToilDir": "/mnt/cache/TMP_TOIL_DIR",
-        "envFilePath": "/data/barskilab/temporary/myenv/bin/activate"
+        "tmpToilDir": "/mnt/cache/TOIL_TMP_DIR",
+        "envFilePath": "/data/barskilab/temporary/myenv/bin/activate",
+        "singularityTmpPath": "/mnt/cache/SINGULARITY_TMP_DIR"
     },
     "aria2cSettings": {
         "--console-log-level": "debug",
