--- a/build-scripts/configs/scidap_default_cluster_settings.json
+++ b/build-scripts/configs/scidap_default_cluster_settings.json
@@ -43,7 +43,7 @@
         "scriptDir": "/home/scidap/satellite/satellite/bin",
         "outputDir": "/home/scidap/scidap/projects",
         "tmpToilDir": "/mnt/cache/TOIL_TMP_DIR",
-        "envFilePath": "/data/barskilab/temporary/myenv/bin/activate",
+        "envFilePath": "/path/to/toilEnvFile",
         "singularityTmpPath": "/mnt/cache/SINGULARITY_TMP_DIR",
         "cwlSingularityPath": "/mnt/cache/SINGULARITY_TMP_DIR"
     },
